--- a/source/index.html
+++ b/source/index.html
@@ -13,21 +13,21 @@
 </head>
 
 <body class="body page__body">
-  <header class="header page__header">
+  <header class="header body__header">
     <div class="header__container">
-      <h1 class="title main-title header__title">Резюме</h1>
+      <h1 class="main-title header__title">Резюме</h1>
       <div class="header__back"></div>
       <nav class="navigation navigation--nojs navigation--closed header__menu">
         <button class="button navigation__toggle header__burger" type="button" aria-expanded="false"
           aria-controls="navigation__list">
           <span class="visually-hidden">Открыть меню </span>
         </button>
-        <ul class="list navigation__list" id="navigation__list">
+        <ul class="navigation__list" id="navigation__list">
           <li class="navigation__item">
-            <a class="link navigation__link" href="#skills">Основные навыки</a>
+            <a class="navigation__link" href="#skills">Основные навыки</a>
           </li>
           <li class="navigation__item">
-            <a class="link navigation__link" href="#portfolio">Портфолио</a>
+            <a class="navigation__link" href="#portfolio">Портфолио</a>
           </li>
         </ul>
       </nav>
@@ -40,29 +40,29 @@
           <div class="about__image-block">
             <picture>
               <source type="image/webp" srcset="img/iam.webp 1x, img/iam@2x.webp 2x">
-              <img class="img" src="img/iam.jpg" srcset="img/iam@2x.jpg 2x" width="92" height="92"
+              <img src="img/iam.jpg" srcset="img/iam@2x.jpg 2x" width="92" height="92"
                 alt="Розова Яна Сергеевна" />
             </picture>
           </div>
           <div class="about__title-block">
-            <h2 class="title section-title about__title">Розова Яна Сергеевна</h2>
+            <h2 class="section-title about__title">Розова Яна Сергеевна</h2>
           </div>
         </header>
-        <h3 class="title section-subtitle about__subtitle">Обо мне</h3>
-        <p class="text  about__text">
+        <h3 class="section-subtitle about__subtitle">Обо мне</h3>
+        <p class="about__text">
           <em>Образование высшее, бакалавр, инженер, магистр.</em> Закончила &laquo;Технологический институт
           Южного федерального университета&raquo; (Таганрог) в&nbsp;2010&nbsp;году.
         </p>
-        <p class="text  about__text">
+        <p class="about__text">
           <em> Специальность:</em> Оптические системы связи и&nbsp;локации.
         </p>
-        <p class="text  about__text">
+        <p class="about__text">
           С&nbsp;2020&nbsp;года увлекаюсь разработкой сайтов. В&nbsp;2021&nbsp;году прошла обучение на курсе
           &laquo;Профессиональная вёрстка
           сайтов&raquo; в&nbsp;&laquo;HTML&nbsp;Academy&raquo;. Принимала участие в&nbsp;марафонах по&nbsp;вёрстке
           и&nbsp;&laquo;Кибер Битве-2021&raquo;.
         </p>
-        <p class="text  about__text">
+        <p class="about__text">
           <em>Прохожу обучение </em> в&nbsp;&laquo;HTML&nbsp;Academy&raquo; по&nbsp;профессии
           &laquo;Фронтенд-разработчик&raquo; в&nbsp;асинхронном формате.
         </p>
@@ -73,24 +73,24 @@
         <a id="skills"></a>
         <h3 class="title section-subtitle skills__subtitle">Основные навыки</h3>
         <div class="skills__block">
-          <ul class="list skills__list">
+          <ul class="skills__list">
             <li class="skills__item">
               <div class="skills__image-block">
-                <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж HTML"
+                <svg class="skills__icon" width="20" height="23" role="img" aria-label="Бейдж HTML"
                   focusable="false">
                   <use xlink:href="img/sprite.svg#html-icon"></use>
                 </svg>
               </div>
-              <p class="text ">html</p>
+              <p>html</p>
             </li>
             <li class="skills__item">
               <div class="skills__image-block">
-                <svg class="icon skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
+                <svg class="skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
                   focusable="false">
                   <use xlink:href="img/sprite.svg#css-icon"></use>
                 </svg>
               </div>
-              <p class="text ">css</p>
+              <p>css</p>
             </li>
             <li class="skills__item">
               <div class="skills__image-block">
@@ -99,7 +99,7 @@
                   <use xlink:href="img/sprite.svg#js-icon"></use>
                 </svg>
               </div>
-              <p class="text ">js</p>
+              <p>js</p>
             </li>
             <li class="skills__item">
               <div class="skills__image-block">
@@ -108,10 +108,10 @@
                   <use xlink:href="img/sprite.svg#scss-icon"></use>
                 </svg>
               </div>
-              <p class="text ">scss</p>
+              <p>scss</p>
             </li>
           </ul>
-          <ul class="list skills__list">
+          <ul class="skills__list">
             <li class="skills__item">
               <div class="skills__image-block">
                 <svg class="icon skills__icon" width="23" height="23" role="img" aria-label="Бейдж COREL DRAW"
@@ -119,16 +119,16 @@
                   <use xlink:href="img/sprite.svg#corel-icon"></use>
                 </svg>
               </div>
-              <p class="text ">corel draw</p>
+              <p>corel draw</p>
             </li>
             <li class="skills__item">
               <div class="skills__image-block">
-                <svg class="icon skills__icon" width="15" height="23" role="img" aria-label="Бейдж FIGMA"
+                <svg class="skills__icon" width="15" height="23" role="img" aria-label="Бейдж FIGMA"
                   focusable="false">
                   <use xlink:href="img/sprite.svg#figma-icon"></use>
                 </svg>
               </div>
-              <p class="text ">figma</p>
+              <p>figma</p>
             </li>
             <li class="skills__item">
               <div class="skills__image-block">
@@ -137,27 +137,27 @@
                   <use xlink:href="img/sprite.svg#ps-icon"></use>
                 </svg>
               </div>
-              <p class="text ">photoshop</p>
+              <p>photoshop</p>
             </li>
           </ul>
         </div>
-        <p class="text skills__text">
+        <p class="skills__text">
           Разработка сайтов в&nbsp;VS Code (HTML, CSS, SCSS, JS), адаптивная, семантичная вёрстка по БЭМ, использование
           svg-графики.
         </p>
-        <p class="text skills__text">
+        <p class="skills__text">
           Работа в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
           векторных изображений, макетирование), Adobe InDesign, Adobe Illustrator.
         </p>
-        <p class="text skills__text">
+        <p class="skills__text">
           Знание программ пакета Office. Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа
           на&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. Работала в качестве "администратора печатного
           участка" более 7 лет.
         </p>
-        <p class="text skills__text">
+        <p class="skills__text">
           <em>Уровень владения компьютером: </em> продвинутый пользователь.
         </p>
-        <p class="text skills__text">
+        <p class="skills__text">
           <em>Уровень владения английским:</em> pre-intermediate.
         </p>
       </div>
@@ -166,22 +166,22 @@
       <div class="container">
         <a id="portfolio"></a>
         <h2 class="visually-hidden">Портфолио</h2>
-        <h3 class="title section-subtitle portfolio__subtitle">Примеры работ</h3>
+        <h3 class="section-subtitle portfolio__subtitle">Примеры работ</h3>
         <div class="slider portfolio__slider">
-          <button class="button swiper-button-prev slider__control" type="button">
+          <button class="swiper-button-prev slider__control" type="button">
             <span class="visually-hidden">К предыдущему слайду</span>
           </button>
-          <button class="button swiper-button-next slider__control" type="button">
+          <button class="swiper-button-next slider__control" type="button">
             <span class="visually-hidden">К следующему слайду</span>
           </button>
           <div class="swiper slider__image-block">
-            <ul class="list swiper-wrapper slider__image-wrapper">
+            <ul class="swiper-wrapper slider__image-wrapper">
 
             </ul>
           </div>
           <div class="swiper-pagination slider__pagination"></div>
           <div class="swiper slider__description-block">
-            <ul class="list swiper-wrapper slider__description-wrapper">
+            <ul class="swiper-wrapper slider__description-wrapper">
 
             </ul>
           </div>
@@ -191,19 +191,19 @@
   </main>
   <footer class="footer page__footer">
     <div class="container footer__container">
-      <a class="link footer__link" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">
+      <a class="footer__link" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">
         <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
           <use xlink:href="img/sprite.svg#github-icon"></use>
         </svg>
         GitHub
       </a>
-      <a class="link footer__link" href="tel:+79604608234" title="Позвонить Frontend-разработчику">
+      <a class="footer__link" href="tel:+79604608234" title="Позвонить Frontend-разработчику">
         <svg class="footer__icon" width="21" height="21" role="img" aria-label="Иконка Github" focusable="false">
           <use xlink:href="img/sprite.svg#phone-icon"></use>
         </svg>
         +7 960 460 8 234
       </a>
-      <p class="text">
+      <p>
         ©Yana Rozova
       </p>
     </div>
@@ -229,14 +229,14 @@
     <li class="swiper-slide slider__description-item">
       <h4 class="title subtitle">Заголовок</h4>
       <div class="slider__text-block">
-        <p class="text slider__text slider__text-anotation">
+        <p class="slider__text slider__text-anotation">
           Анотация
         </p>
-        <p class="text slider__text slider__text-description">
+        <p class="slider__text slider__text-description">
           Описание
         </p>
       </div>
-      <a class="link button-preview slider__button" target="_blank" href="https://chiprose.github.io/Keksobooking/"
+      <a class="button-preview slider__button" target="_blank" href="https://chiprose.github.io/Keksobooking/"
         title="Просмотреть опубликованный сайт">Открыть сайт
       </a>
     </li>
