--- a/source/index.html
+++ b/source/index.html
@@ -60,14 +60,9 @@
           <em> Специальность:</em> Оптические системы связи и&nbsp;локации.
         </p>
         <p class="about__text">
-          С&nbsp;2020&nbsp;года увлекаюсь разработкой сайтов. В&nbsp;2021&nbsp;году прошла обучение на курсе
-          &laquo;Профессиональная вёрстка
-          сайтов&raquo; в&nbsp;&laquo;HTML&nbsp;Academy&raquo;. Принимала участие в&nbsp;марафонах по&nbsp;вёрстке
+          С&nbsp;2020&nbsp;года увлекаюсь разработкой сайтов. Прошла обучение по профессиям
+          &laquo;Frontend-разработчик&raquo;, &laquo;React-разработчик&raquo; в&nbsp;&laquo;HTML&nbsp;Academy&raquo;. Принимала участие в&nbsp;марафонах по&nbsp;вёрстке
           и&nbsp;&laquo;Кибер Битве-2021&raquo;.
-        </p>
-        <p class="about__text">
-          <em>Прохожу обучение </em> в&nbsp;&laquo;HTML&nbsp;Academy&raquo; по&nbsp;профессии
-          &laquo;Фронтенд-разработчик&raquo; в&nbsp;асинхронном формате.
         </p>
       </div>
     </section>
@@ -76,6 +71,35 @@
         <a id="skills"></a>
         <h3 class="section-subtitle skills__subtitle">Основные навыки</h3>
         <div class="skills__block">
+          <ul class="skills__list">
+            <li class="skills__item">
+              <div class="skills__image-block">
+                <svg class="skills__icon" width="20" height="23" role="img" aria-label="Бейдж REACT"
+                  focusable="false">
+                  <use xlink:href="img/sprite.svg#react-icon"></use>
+                </svg>
+              </div>
+              <p class="skills__name">react</p>
+            </li>
+            <li class="skills__item">
+              <div class="skills__image-block">
+                <svg class="skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
+                  focusable="false">
+                  <use xlink:href="img/sprite.svg#styled-components-icon"></use>
+                </svg>
+              </div>
+              <p class="skills__name">styled components</p>
+            </li>
+            <li class="skills__item">
+              <div class="skills__image-block">
+                <svg class="skills__icon" width="20" height="23" role="img" aria-label="Бейдж CSS"
+                  focusable="false">
+                  <use xlink:href="img/sprite.svg#storybook-icon"></use>
+                </svg>
+              </div>
+              <p class="skills__name">storybook</p>
+            </li>
+          </ul>
           <ul class="skills__list">
             <li class="skills__item">
               <div class="skills__image-block">
@@ -145,20 +169,19 @@
           </ul>
         </div>
         <p class="skills__text">
-          Разработка сайтов в&nbsp;VS Code (HTML, CSS, SCSS, JS), адаптивная, семантичная вёрстка по БЭМ, использование
-          svg-графики.
+          В разработке использую:&nbsp; REACT, STYLED COMPONENTS, STORYBOOK, HTML, CSS, SCSS, JS, адаптивная, семантичная вёрстка по БЭМ, использование
+          svg-графики. Написание тестов для React-компонентов. С 2022 г. работаю веб-разработчиком в компании <a class="text-link" href="https://www.snowcommerce.com/">"Snowcommerce"</a>.
         </p>
         <p class="skills__text">
-          Работа в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
+          Работаю в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
           векторных изображений, макетирование), Adobe InDesign, Adobe Illustrator.
         </p>
         <p class="skills__text">
-          Знание программ пакета Office. Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа
-          на&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. Работала в качестве "администратора печатного
+          Знание программ пакета Office. Навыки использования офисной техники (распечатка, сканирование, настройка), оборудования интерьерной и&nbsp;полиграфической печати. Работала в качестве "администратора печатного
           участка" более 7 лет.
         </p>
         <p class="skills__text">
-          <em>Уровень владения английским:</em> pre-intermediate.
+          <em>Уровень владения английским:</em> intermediate.
         </p>
       </div>
     </section>
