--- a/source/index.html
+++ b/source/index.html
@@ -64,6 +64,7 @@
           &laquo;Frontend-разработчик&raquo;, &laquo;React-разработчик&raquo; в&nbsp;&laquo;HTML&nbsp;Academy&raquo;. Принимала участие в&nbsp;марафонах по&nbsp;вёрстке
           и&nbsp;&laquo;Кибер Битве-2021&raquo;.
         </p>
+        <p class="about__text">Проходила стажировку в <a class="text-link" href="https://exceed-team.com/ru">"Exceed Team"</a>. Работала веб-разработчиком в компании <a class="text-link" href="https://www.snowcommerce.com/">"Snowcommerce"</a>.</p>
       </div>
     </section>
     <section class="skills main__skills">
@@ -169,8 +170,8 @@
           </ul>
         </div>
         <p class="skills__text">
-          В разработке использую:&nbsp; REACT, STYLED COMPONENTS, STORYBOOK, HTML, CSS, SCSS, JS, адаптивная, семантичная вёрстка по БЭМ, использование
-          svg-графики. Написание тестов для React-компонентов. С 2022 г. работаю веб-разработчиком в компании <a class="text-link" href="https://www.snowcommerce.com/">"Snowcommerce"</a>.
+          В разработке использую:&nbsp; REACT, JS, STYLED COMPONENTS, MUI, STORYBOOK, HTML, CSS, SCSS, адаптивная, семантичная вёрстка по БЭМ,
+          svg-графику.
         </p>
         <p class="skills__text">
           Работаю в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
