Add smooth scroll

--- a/source/index.html
+++ b/source/index.html
@@ -170,8 +170,7 @@
           </ul>
         </div>
         <p class="skills__text">
-          В разработке использую:&nbsp; REACT, JS, STYLED COMPONENTS, MUI, STORYBOOK, HTML, CSS, SCSS, адаптивная, семантичная вёрстка по БЭМ,
-          svg-графику.
+          В разработке использую:&nbsp; REACT, JS, STYLED COMPONENTS, MUI, STORYBOOK, HTML, CSS, SCSS, WEBPACK, svg-графику. Адаптивная, семантичная вёрстка по БЭМ.
         </p>
         <p class="skills__text">
           Работаю в&nbsp;Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
