--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
           &laquo;Frontend-разработчик&raquo;, &laquo;React-разработчик&raquo; в&nbsp;&laquo;HTML&nbsp;Academy&raquo;. Принимала участие в&nbsp;марафонах по&nbsp;вёрстке
           и&nbsp;&laquo;Кибер Битве-2021&raquo;.
         </p>
-        <p class="about__text">Проходила стажировку в <a class="text-link" href="https://exceed-team.com/ru">"Exceed Team"</a>. Работала веб-разработчиком в компании <a class="text-link" href="https://www.snowcommerce.com/">"Snowcommerce"</a>.</p>
+        <p class="about__text">Проходила стажировку в <a class="text-link" href="https://exceed-team.com/">"Exceed Team"</a>. Работала веб-разработчиком в компании <a class="text-link" href="https://www.snowcommerce.com/">"Snowcommerce"</a>.</p>
       </div>
     </section>
     <section class="skills main__skills">
